src/objects/Charket__CharketContext__c.object
<CustomObject>
    <fields>
        <fullName>Charket__CurrentSkill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Skill</label>
        <referenceTo>Charket__Skill__c</referenceTo>
        <relationshipLabel>Charket Contexts</relationshipLabel>
        <relationshipName>CurrentCharketContexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__PreviousSkill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Skill</label>
        <referenceTo>Charket__Skill__c</referenceTo>
        <relationshipLabel>Charket Contexts (Previous Skill)</relationshipLabel>
        <relationshipName>PreviousCharketContexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Follower</label>
        <referenceTo>Charket__WeChatFollower__c</referenceTo>
        <relationshipLabel>Charket Contexts</relationshipLabel>
        <relationshipName>CharketContexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Charket Context</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charket Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>